--- a/maven_sonar-master/pom.xml
+++ b/maven_sonar-master/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>devops-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>devops-app</name>
+  <name>SONAR-TRY</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -86,7 +86,7 @@
             <properties>
                 <!-- Optional URL to server. Default value is http://localhost:9000 -->
                 <sonar.host.url>
-                  http://52.66.200.102:9000
+                  http://127.0.0.1:9000
                 </sonar.host.url>
             </properties>
         </profile>
